--- a/Source/eBay.Service.SDK/eBay.Service.csproj
+++ b/Source/eBay.Service.SDK/eBay.Service.csproj
@@ -70,13 +70,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Core\Soap\WebService.cs">
-      <DependentUpon>WebService.xml</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="..\eBay.snk">
       <Link>eBay.snk</Link>
     </None>
@@ -101,14 +94,6 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="Core\Soap\WebService.xml">
-      <Generator>eBayCodeGenerator</Generator>
-      <LastGenOutput>WebService.cs</LastGenOutput>
-      <CustomToolNamespace>eBay.Service.Core.Soap</CustomToolNamespace>
-      <SubType>Designer</SubType>
-    </Content>
-  </ItemGroup>
   <PropertyGroup>
     <Company>eBay, Inc.</Company>
     <Product>eBay Service SDK</Product>
@@ -117,5 +102,9 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SystemWebAdapters" Version="1.3.0" />
+      <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.*" />
+      <PackageReference Include="System.ServiceModel.Http" Version="4.4.*" />
+      <PackageReference Include="System.ServiceModel.NetTcp" Version="4.4.*" />
+      <PackageReference Include="System.ServiceModel.Security" Version="4.4.*" />
   </ItemGroup>
 </Project>
