--- a/Source/eBay.Service.SDK/eBay - Backup.Service.csproj
+++ b/Source/eBay.Service.SDK/eBay - Backup.Service.csproj
@@ -8,7 +8,7 @@
     <Copyright>Copyright 1995-2018 eBay Inc. All Rights Reserved.</Copyright>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>Zhuowei Yang, Lokesh Rishi, Florian Dohrendorf</Authors>
-    <Version>4.0.1-pre</Version>
+    <Version>4.0.0-pre</Version>
     <PackageId>$(AssemblyName).Fork</PackageId>
     <Title>eBay Trading Api fork for .NET Core</Title>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -18,7 +18,7 @@
     <None Include="..\eBay.snk">
       <Link>eBay.snk</Link>
     </None>
-    <None Include="docs\README.md" Pack="true" PackagePath="\"/>
+        <None Include="docs\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
   <ItemGroup>
     <!--<PackageReference Include="Microsoft.AspNetCore.SystemWebAdapters" Version="1.3.0" />-->
@@ -27,5 +27,8 @@
       <PackageReference Include="System.ServiceModel.Http" Version="4.4.*" />
       <PackageReference Include="System.ServiceModel.NetTcp" Version="4.4.*" />
       <PackageReference Include="System.ServiceModel.Security" Version="4.4.*" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 </Project>
